[package]
name = "xstein"
version = "0.1.0"
authors = ["Alexander Leonhardt <equinox.salexander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench=[]

[dependencies]
membuffer={git="https://github.com/ShadowItaly/membuffer", rev = "a44a1b8f6bdfa5cfc668a0d04255e3a07e72c980"}
fst = {version="0.4",features=["levenshtein"]}
memmap = "0.7.0"
regex = "1.4.3"
serde = "1.0"
levenshtein_automata = "0.2.0"
bincode = "1.3.1"
